apps/frontend-nginx/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nginx
  labels:
    app: frontend-nginx
spec:
  selector:
    app: frontend-nginx
  ports:
    - name: http
      port: 80
      targetPort: http
